[tool.poetry]
name = "wsadmin-type-hints"
version = "0.1.1"
description = "Provide type hints for `wsadmin` object methods"
authors = ["Luca Salvarani <lucasalvarani99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "wsadmin_type_hints", from = "src" }
]
homepage = "https://lukesavefrogs.github.io/wsadmin-type-hints/"
repository = "https://github.com/LukeSavefrogs/wsadmin-type-hints/"
documentation = "https://lukesavefrogs.github.io/wsadmin-type-hints/"
keywords = ["wsadmin", "ibm", "stubs", "types", "jython"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LukeSavefrogs/wsadmin-type-hints/issues"


[tool.poetry.dependencies]
python = ">=3.7,<=3.11"
mkdocs-simple-hooks = "^0.1.5"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"
types-requests = "^2.28.11.12"
beautifulsoup4 = "^4.11.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.11"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-section-index = "^0.3.5"
mkdocs-literate-nav = "^0.6.0"
mkdocs-gen-files = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks.docs]
env = { DEVELOPMENT = "true", SERVER_ADDRESS = "127.0.0.1:8000" }
help = "Start the local server to test the documentation."
sequence = [
    { shell = "echo $SERVER_ADDRESS" },
    { script = "webbrowser:open('http://' + environ['SERVER_ADDRESS'] + '/')" },
    { cmd = "mkdocs serve --watch-theme --dev-addr $SERVER_ADDRESS" },
]


[tool.mypy]
# strict = true
warn_no_return = false
warn_return_any = false
disallow_untyped_defs = false
warn_incomplete_stub = false
ignore_missing_imports = true

# disable_error_code = 'no-untyped-def,empty-body'